<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        android:text="@string/my_cahnnel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv"
        android:layout_alignBottom="@id/tv"
        android:layout_marginLeft="16dp"
        android:textSize="12sp"
        android:textColor="@color/tip"
        android:text="@string/tip_drag"/>

    <TextView
        android:id="@+id/tv_btn_edit"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:background="@drawable/bg_btn_channel_manager"
        android:textSize="13sp"
        android:textColor="@color/red_500"
        android:text="@string/edit"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_alignParentBottom="true"
        android:background="@color/tip"/>
</RelativeLayout>
