<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_150"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text=""
            android:textColor="#75787B"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher"
            android:text=""
            android:textSize="30sp"
            android:visibility="invisible" />

        <!--net setting-->

        <LinearLayout
            android:layout_width="@dimen/dp_150"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></TextView>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dp_15"
                android:gravity="center"
                android:text="网络设置"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>


    <!--    NC Cloud-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="NC Cloud"
        android:textColor="@color/red_"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_large">

        <TextView
            android:id="@+id/up_current_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户名登录"
            android:textColor="@color/colorAccent"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/up_backup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="手机号登录"
            android:textSize="18sp" />


        <!--        账套选择-->
        <com.yonyou.nccmob.widget.XCDropDownListView
            android:id="@+id/drop_down_list_view"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_30"></com.yonyou.nccmob.widget.XCDropDownListView>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_account" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_toRightOf="@+id/img_account"
            android:background="@null"
            android:hint="@string/account"
            android:maxLines="1"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@color/orange_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_pw"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_pw" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_toRightOf="@+id/img_pw"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text=""
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/iv_see_password"
            android:layout_width="@dimen/image_height_litter"
            android:layout_height="@dimen/image_height_litter"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_password_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw"
            android:background="@color/orange_gray" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_large"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small">

        <CheckBox
            android:id="@+id/checkBox_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:padding="@dimen/dp_10"
            android:text="@string/check_password"
            android:textColor="@color/top_bar_normal_bg"
            android:textSize="@dimen/text_size_normal"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:padding="@dimen/dp_10"
            android:text="@string/check_login"
            android:textSize="@dimen/text_size_normal" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/forgetPW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/forget_password"
                android:textColor="@color/orange_black"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@drawable/btn_orange_selector"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal" />


</LinearLayout>
